--- a/styles/teacher_home.css
+++ b/styles/teacher_home.css
@@ -3,12 +3,13 @@ body {
   text-align: center;
   padding: 0;
   margin: 0;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 header {
-  background-color: #007bff;
-  color: white;
+  /* background-color: ; */
+  color: rgb(0, 0, 0);
+  
   padding: 20px;
 }
 
@@ -34,4 +35,39 @@ button {
 
 button:hover {
   background-color: #0056b3;
+}
+.btn-custom {
+  background-color: #deaa79;
+  width: 45%; /* Điều chỉnh chiều rộng nút */
+  padding: 20px;
+  text-align: center;
+  color: #ffffff;
+  font-size: 18px;
+  border-radius: 16px;
+  border: none;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.15);
+  text-decoration: none;
+
+  display: flex; /* Flexbox layout */
+  flex-direction: column; /* Sắp xếp các phần tử theo cột */
+  justify-content: center;
+  align-items: center;
+  gap: 10px; /* Khoảng cách giữa icon và chữ */
+
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.btn-custom:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
+}
+
+.btn-custom i {
+  font-size: 30px; /* Kích thước icon */
+  color: #ffffff; /* Màu icon */
+}
+
+.btn-custom span {
+  font-size: 18px; /* Kích thước chữ */
+  font-weight: bold; /* In đậm chữ */
 }
