--- a/styles/teacher_home.css
+++ b/styles/teacher_home.css
@@ -1,10 +1,10 @@
-body {
+/* body {
   font-family: Arial, sans-serif;
   text-align: center;
   padding: 0;
   margin: 0;
   background-color: #ffffff;
-}
+} */
 
 header {
   /* background-color: ; */
